# LitterBug-Algorithm

./: .gitignore  .gitmodules  CMakeLists.txt  Litter_detect  Litter_detect.cpp  Litter_detect2.cpp  Litter_iot_connect.py  Litterheaders.h  Makefile  README.md  detected_litters.txt  edge_grouping.cpp  edge_grouping.h  litter_monitor.cpp  parameters.h  parameters.txt  scoring.cpp  scoring.h
LitterBug/: LitterBug.pro  qpulib.pri
QPULib/Lib/: QPULib.h
QPULib/Lib/Common/: Stack.h
QPULib/Lib/Source/: Ptr.h  Syntax.h
QPULib/Lib/VideoCore/: Mailbox.h  SharedArray.h  VideoCore.h
QPULib/Tests/: GCD  Makefile
build-cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
